[tool.poetry]
name = "kahley"
version = "0.1.0"
description = ""
authors = ["Tiago Antao <tiago@tiago.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
typer = "^0.12.3"
bpy = "^4.1.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
mypy = "^1.10.0"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff.lint]
select = [
  "E", "W", # pycodestyle
  "F",      # pyflakes
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "I",      # isort
  "N",      # PEP8
  "S",      # flake8-bandit
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "ISC",    # flake8-implicit-str-concat
  "PT",     # flake8-pytest-style
  "RET",    # flake8-return
  "SIM",    # flake8-simplify
  "PTH",    # flake8-use-pathlib
  "PD",     # pandas-vet
  "PLE",    # pylint-error
  "NPY",    # numpy
  "RUF",    # ruff
]

ignore = [
  "D203",
  "D212"
]
